<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Steps</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_groups">Groups</string>
    <string name="logo">logo</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_account_sign_up_"><u>Don\'t have account? Sign Up!</u></string>
    <string name="email_and_or_password_is_incorrect">Email and/or password is incorrect</string>
    <string name="must_be_filled">Must be filled!</string>
    <string name="log_out">Log Out</string>
    <string name="join_steps">Join Steps</string>
    <string name="display_name">Display Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_don_t_have_any_groups_join_or_create_one">you don\'t have any groups! \n Join or Create one</string>
    <string name="title_activity_add_group">Create Group</string>
    <string name="create_new_group">Create New Group</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="create_group">Create Group</string>
    <string name="refresh">Refresh</string>
    <string name="search_groups">Search Groups</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="group_icon">Group icon</string>
    <string name="members">Members</string>
    <string name="title_activity_group_members">GroupMembers</string>
    <string name="add_member">Add Member</string>
    <string name="add_task">Add Task</string>
    <string name="member_profile_picture">Member profile picture</string>
    <string name="next">next</string>
    <string name="title_activity_add_to_group">Add New Member</string>
    <string name="no_members_found_">No members found!</string>
    <string name="leave_group">Leave Group</string>
    <string name="title_activity_add_new_task">AddNewTaskActivity</string>
    <string name="title">Title</string>
    <string name="add_new_task">Add New Task</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose Time</string>
    <string name="spinner_item_icon">spinner item icon</string>
    <string name="choose_group_icon">Choose Group Icon</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="author">Author</string>
    <string name="completed_by">Completed By</string>
    <string name="last_updated">Last Updated</string>
    <string name="status">Status</string>
    <string name="i_ll_do_that">I\'ll do that</string>
    <string name="finish_task">Finish Task</string>
    <string name="time_left">Time Left</string>
    <string name="group_does_not_have_any_tasks_n_create_one_now">Group does not have any tasks. \n Create one now!</string>

</resources>