<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent">
    

	<LinearLayout 
	    style="@style/MyListView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    android:padding="20dp" >
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textStyle="bold"
			android:gravity="center_horizontal"
	        android:text="@string/add_new_task"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    <EditText
	        android:id="@+id/title"
	        style="@style/MyTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginBottom="5dp"
	        android:hint="@string/title" >
	
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/description"
	        style="@style/MyTextView"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="5dp"
	        android:hint="@string/description"
	        android:lines="3" />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textStyle="bold"
			android:gravity="center_horizontal"
	        android:text="@string/choose_time"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <TimePicker
	        android:id="@+id/time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	   	<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textStyle="bold"
			android:gravity="center_horizontal"
	        android:text="@string/choose_date"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <DatePicker
	        android:id="@+id/date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:calendarViewShown="false" />
	
	    <Button
	        style="@style/MyButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="addTask"
	        android:text="@string/add_task" />
	
	</LinearLayout>
</ScrollView>