<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/steps_blue" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            style="@style/TaskListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:text="@string/title" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/task_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/TaskListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <TextView
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/TaskListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:text="@string/author" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/task_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/TaskListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:text="@string/last_updated" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/task_updated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/task_executor_group"
            style="@style/TaskListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/task_executor_lable"
                style="@style/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:text="@string/completed_by" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/task_executor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/task_due_date_group"
            style="@style/TaskListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                style="@style/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:text="@string/time_left" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/task_due_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/task_status_group"
            style="@style/TaskListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/status_lable"
                style="@style/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:text="@string/status" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/task_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/accept_button"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accept"
            android:text="@string/i_ll_do_that"
            android:visibility="gone" />

        <Button
            android:id="@+id/finish_button"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="finish"
            android:text="@string/finish_task"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>